# python-programmers

./: .flake8  Makefile  README.md  pyproject.toml
python_programmers/: config.py  funcExecutor.py  judge.py  main.py  moduleLoader.py  testExecutor.py
quizzes/: c30l118666.py  c30l120803.py  c30l120820.py  c30l12921.py  c30l12977.py  c30l131128.py  c30l133499.py  c30l133502.py  c30l135808.py  c30l140108.py  c30l150370.py  c30l155652.py  c30l160586.py  c30l161989.py  c30l161990.py  c30l172928.py  c30l17682.py  c30l178871.py  c30l205121.py  c30l250125.py  c30l250137.py  c30l258712.py  c30l340198.py  c30l340199.py  c30l340213.py  c30l42576.py  c30l42840.py  c30l42862.py  c30l42889.py  c30l64061.py  c30l67256.py  c30l77484.py  c30l92334.py
tests/: funcExecutor_test.py  judge_test.py  moduleLoader_test.py  testExecutor_test.py
tests/test_doubles/: sample_module.py  sample_quiz.py  sample_quiz_with_incorrect.py
tools/: crawl_quiz.py  run_tests.py
