[tool.poetry]
name = "python-programmers"
version = "0.1.0"
description = ""
authors = ["paikwiki <paikwiki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.poetry.scripts]
submit = "python_programmers:main"
test = "tools.run_tests:main"
crawl = "tools.crawl_quiz:main"
